--- a/scraping/test.ipynb
+++ b/scraping/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92153,7 +92153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -92210,41 +92210,36 @@
       "200\n",
       "{\n",
       "  \"author\": {\n",
-      "    \"_account_id\": 1274728,\n",
-      "    \"name\": \"Eric Orth\",\n",
-      "    \"email\": \"ericorth@chromium.org\",\n",
+      "    \"_account_id\": 1128439,\n",
+      "    \"name\": \"Bruce Dawson\",\n",
+      "    \"email\": \"brucedawson@chromium.org\",\n",
       "    \"avatars\": [\n",
       "      {\n",
-      "        \"url\": \"https://lh3.googleusercontent.com/-7cKVeA1SC5o/AAAAAAAAAAI/AAAAAAAAAAA/DeyjnIyJBmU/s32-p/photo.jpg\",\n",
+      "        \"url\": \"https://lh5.googleusercontent.com/-MC9DTGaFqcI/AAAAAAAAAAI/AAAAAAAAAAA/Ixzy9FIcwGE/s32-p/photo.jpg\",\n",
       "        \"height\": 32\n",
       "      },\n",
       "      {\n",
-      "        \"url\": \"https://lh3.googleusercontent.com/-7cKVeA1SC5o/AAAAAAAAAAI/AAAAAAAAAAA/DeyjnIyJBmU/s56-p/photo.jpg\",\n",
+      "        \"url\": \"https://lh5.googleusercontent.com/-MC9DTGaFqcI/AAAAAAAAAAI/AAAAAAAAAAA/Ixzy9FIcwGE/s56-p/photo.jpg\",\n",
       "        \"height\": 56\n",
       "      },\n",
       "      {\n",
-      "        \"url\": \"https://lh3.googleusercontent.com/-7cKVeA1SC5o/AAAAAAAAAAI/AAAAAAAAAAA/DeyjnIyJBmU/s100-p/photo.jpg\",\n",
+      "        \"url\": \"https://lh5.googleusercontent.com/-MC9DTGaFqcI/AAAAAAAAAAI/AAAAAAAAAAA/Ixzy9FIcwGE/s100-p/photo.jpg\",\n",
       "        \"height\": 100\n",
       "      },\n",
       "      {\n",
-      "        \"url\": \"https://lh3.googleusercontent.com/-7cKVeA1SC5o/AAAAAAAAAAI/AAAAAAAAAAA/DeyjnIyJBmU/s120-p/photo.jpg\",\n",
+      "        \"url\": \"https://lh5.googleusercontent.com/-MC9DTGaFqcI/AAAAAAAAAAI/AAAAAAAAAAA/Ixzy9FIcwGE/s120-p/photo.jpg\",\n",
       "        \"height\": 120\n",
       "      }\n",
-      "    ]\n",
+      "    ],\n",
+      "    \"status\": \"Pacific Time\"\n",
       "  },\n",
       "  \"unresolved\": true,\n",
-      "  \"id\": \"f1606386_a4bc1e49\",\n",
-      "  \"path\": \"net/socket/tcp_socket_win.cc\",\n",
-      "  \"line\": 567,\n",
-      "  \"range\": {\n",
-      "    \"start_line\": 567,\n",
-      "    \"start_character\": 2,\n",
-      "    \"end_line\": 567,\n",
-      "    \"end_character\": 11\n",
-      "  },\n",
-      "  \"updated\": \"2021-10-05 16:35:22.000000000\",\n",
-      "  \"message\": \"Nit: Include check_op.h.\",\n",
-      "  \"commit_id\": \"0f793ba24333ca055f6a0b14eb5298a7d6b45323\"\n",
+      "  \"id\": \"54515329_8b3a21a6\",\n",
+      "  \"path\": \"net/base/winsock_util.cc\",\n",
+      "  \"line\": 21,\n",
+      "  \"updated\": \"2021-10-04 16:14:31.000000000\",\n",
+      "  \"message\": \"The WASResetEvent has to be outside of the DCHECK or else it won't be executed in release builds.\",\n",
+      "  \"commit_id\": \"958b2ab40b8d6df640a39496054740b431045f55\"\n",
       "}\n"
      ]
     }
@@ -92252,8 +92247,8 @@
    "source": [
     "# rivisions/id/comments/idを叩いてみる。\n",
     "changes_id = \"chromium%2Fsrc~main~Ief8dade4c2d578c5eb1973f3a09d148fd05bea42\"\n",
-    "revision_id = \"0f793ba24333ca055f6a0b14eb5298a7d6b45323\"\n",
-    "comment_id = \"f1606386_a4bc1e49\"\n",
+    "revision_id = \"958b2ab40b8d6df640a39496054740b431045f55\"\n",
+    "comment_id = \"54515329_8b3a21a6\"\n",
     "response = get_to_uri(\"changes/\"+changes_id+\"/revisions/\"+revision_id+\"/comments/\"+comment_id)\n",
     "content = response.content.decode(\"utf-8\").split(\"\\n\")[1]\n",
     "di = json.loads(content.split(\"\\n\")[0])\n",
@@ -92320,7 +92315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -92328,12 +92323,144 @@
      "output_type": "stream",
      "text": [
       "200\n",
-      ")]}'\n",
-      "{\"change_type\":\"MODIFIED\",\"content\":[]}\n",
-      "\n",
       "{\n",
+      "  \"meta_a\": {\n",
+      "    \"name\": \"net/base/winsock_util.cc\",\n",
+      "    \"content_type\": \"text/x-c\",\n",
+      "    \"lines\": 50,\n",
+      "    \"web_links\": [\n",
+      "      {\n",
+      "        \"name\": \"browse\",\n",
+      "        \"url\": \"https://chromium.googlesource.com/chromium/src/+/a8b8fa786aebafce6fa94feebdf7ec2e18a9f75b/net/base/winsock_util.cc\",\n",
+      "        \"target\": \"_blank\"\n",
+      "      }\n",
+      "    ]\n",
+      "  },\n",
+      "  \"meta_b\": {\n",
+      "    \"name\": \"net/base/winsock_util.cc\",\n",
+      "    \"content_type\": \"text/x-c\",\n",
+      "    \"lines\": 26,\n",
+      "    \"web_links\": [\n",
+      "      {\n",
+      "        \"name\": \"browse\",\n",
+      "        \"url\": \"https://chromium.googlesource.com/chromium/src/+/refs/changes/66/3197866/3/net/base/winsock_util.cc\",\n",
+      "        \"target\": \"_blank\"\n",
+      "      }\n",
+      "    ]\n",
+      "  },\n",
       "  \"change_type\": \"MODIFIED\",\n",
-      "  \"content\": []\n",
+      "  \"diff_header\": [\n",
+      "    \"diff --git a/net/base/winsock_util.cc b/net/base/winsock_util.cc\",\n",
+      "    \"index 0aefe66..d4e702c 100644\",\n",
+      "    \"--- a/net/base/winsock_util.cc\",\n",
+      "    \"+++ b/net/base/winsock_util.cc\"\n",
+      "  ],\n",
+      "  \"content\": [\n",
+      "    {\n",
+      "      \"ab\": [\n",
+      "        \"// Copyright (c) 2011 The Chromium Authors. All rights reserved.\",\n",
+      "        \"// Use of this source code is governed by a BSD-style license that can be\",\n",
+      "        \"// found in the LICENSE file.\",\n",
+      "        \"\",\n",
+      "        \"#include \\\"net/base/winsock_util.h\\\"\",\n",
+      "        \"\"\n",
+      "      ]\n",
+      "    },\n",
+      "    {\n",
+      "      \"a\": [\n",
+      "        \"#include \\\"base/check.h\\\"\",\n",
+      "        \"#include \\\"base/compiler_specific.h\\\"\",\n",
+      "        \"#include \\\"base/debug/alias.h\\\"\",\n",
+      "        \"#include \\\"net/base/net_errors.h\\\"\"\n",
+      "      ],\n",
+      "      \"b\": [\n",
+      "        \"#include \\\"base/check_op.h\\\"\"\n",
+      "      ]\n",
+      "    },\n",
+      "    {\n",
+      "      \"ab\": [\n",
+      "        \"\",\n",
+      "        \"namespace net {\",\n",
+      "        \"\"\n",
+      "      ]\n",
+      "    },\n",
+      "    {\n",
+      "      \"a\": [\n",
+      "        \"namespace {\",\n",
+      "        \"\",\n",
+      "        \"// Pass the important values as function arguments so that they are available\",\n",
+      "        \"// in crash dumps. Disable inlining so that an actual function call is made and\",\n",
+      "        \"// disable tail calls so that the parent function is on the call stack.\",\n",
+      "        \"NOINLINE void NOT_TAIL_CALLED CheckEventWait(WSAEVENT hEvent,\",\n",
+      "        \"                                             DWORD wait_rv,\",\n",
+      "        \"                                             DWORD expected) {\",\n",
+      "        \"  if (wait_rv != expected) {\",\n",
+      "        \"    DWORD err = ERROR_SUCCESS;\",\n",
+      "        \"    if (wait_rv == WAIT_FAILED)\",\n",
+      "        \"      err = GetLastError();\",\n",
+      "        \"    base::debug::Alias(&err);\",\n",
+      "        \"    CHECK(false);  // Crash.\",\n",
+      "        \"  }\",\n",
+      "        \"}\",\n",
+      "        \"\",\n",
+      "        \"}  // namespace\",\n",
+      "        \"\"\n",
+      "      ]\n",
+      "    },\n",
+      "    {\n",
+      "      \"ab\": [\n",
+      "        \"void AssertEventNotSignaled(WSAEVENT hEvent) {\",\n",
+      "        \"  DWORD wait_rv = WaitForSingleObject(hEvent, 0);\"\n",
+      "      ]\n",
+      "    },\n",
+      "    {\n",
+      "      \"a\": [\n",
+      "        \"  CheckEventWait(hEvent, wait_rv, WAIT_TIMEOUT);\"\n",
+      "      ],\n",
+      "      \"b\": [\n",
+      "        \"  DCHECK_EQ(wait_rv, static_cast<DWORD>(WAIT_TIMEOUT));\"\n",
+      "      ]\n",
+      "    },\n",
+      "    {\n",
+      "      \"ab\": [\n",
+      "        \"}\",\n",
+      "        \"\",\n",
+      "        \"bool ResetEventIfSignaled(WSAEVENT hEvent) {\"\n",
+      "      ]\n",
+      "    },\n",
+      "    {\n",
+      "      \"a\": [\n",
+      "        \"  // TODO(wtc): Remove the CHECKs after enough testing.\"\n",
+      "      ]\n",
+      "    },\n",
+      "    {\n",
+      "      \"ab\": [\n",
+      "        \"  DWORD wait_rv = WaitForSingleObject(hEvent, 0);\",\n",
+      "        \"  if (wait_rv == WAIT_TIMEOUT)\",\n",
+      "        \"    return false;  // The event object is not signaled.\"\n",
+      "      ]\n",
+      "    },\n",
+      "    {\n",
+      "      \"a\": [\n",
+      "        \"  CheckEventWait(hEvent, wait_rv, WAIT_OBJECT_0);\",\n",
+      "        \"  BOOL ok = WSAResetEvent(hEvent);\",\n",
+      "        \"  CHECK(ok);\"\n",
+      "      ],\n",
+      "      \"b\": [\n",
+      "        \"  DCHECK_EQ(wait_rv, static_cast<DWORD>(WAIT_OBJECT_0));\",\n",
+      "        \"  DCHECK(WSAResetEvent(hEvent));\"\n",
+      "      ]\n",
+      "    },\n",
+      "    {\n",
+      "      \"ab\": [\n",
+      "        \"  return true;\",\n",
+      "        \"}\",\n",
+      "        \"\",\n",
+      "        \"}  // namespace net\",\n",
+      "        \"\"\n",
+      "      ]\n",
+      "    }\n",
+      "  ]\n",
       "}\n"
      ]
     }
@@ -92341,15 +92468,44 @@
    "source": [
     "# revisions/id/files/file/diffを叩いてみる。\n",
     "changes_id = \"chromium%2Fsrc~main~Ief8dade4c2d578c5eb1973f3a09d148fd05bea42\"\n",
-    "revision_id = \"0f793ba24333ca055f6a0b14eb5298a7d6b45323\"\n",
-    "comment_id = \"f1606386_a4bc1e49\"\n",
-    "file_id = \"/COMMIT_MSG\"\n",
-    "response = get_to_uri(\"changes/\"+changes_id+\"/revisions/\"+revision_id+\"/files/\"+file_id+\"/diff\")\n",
+    "revision_id = \"958b2ab40b8d6df640a39496054740b431045f55\"\n",
+    "comment_id = \"54515329_8b3a21a6\"\n",
+    "file_id = \"net%2Fbase%2Fwinsock_util.cc\"\n",
+    "response = get_to_uri(\"changes/\"+changes_id+\"/revisions/\"+\"3\"+\"/files/\"+file_id+\"/diff\")\n",
     "content = response.content.decode(\"utf-8\").split(\"\\n\")[1]\n",
     "di = json.loads(content.split(\"\\n\")[0])\n",
-    "save_json(di,\"checking_api_log/changes_id_revisions_id_files.json\")\n",
+    "save_json(di,\"checking_api_log/changes_id_revisions_id_files_id_diff.json\")\n",
     "print(json.dumps(di,indent=2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "404\n"
+     ]
+    },
+    {
+     "ename": "JSONDecodeError",
+     "evalue": "Expecting value: line 1 column 1 (char 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/v9/7w9r94gd5qj0kq2g_hr6s4500000gn/T/ipykernel_81034/1327344659.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_to_uri\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"changes/\"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mchanges_id\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"/revisions/\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mcontent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"utf-8\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mdi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0msave_json\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"checking_api_log/changes_id_revisions_id_files.json\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdumps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mindent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.8/lib/python3.8/json/__init__.py\u001b[0m in \u001b[0;36mloads\u001b[0;34m(s, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[1;32m    355\u001b[0m             \u001b[0mparse_int\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mparse_float\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    356\u001b[0m             parse_constant is None and object_pairs_hook is None and not kw):\n\u001b[0;32m--> 357\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_default_decoder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    358\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mcls\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    359\u001b[0m         \u001b[0mcls\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mJSONDecoder\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.8/lib/python3.8/json/decoder.py\u001b[0m in \u001b[0;36mdecode\u001b[0;34m(self, s, _w)\u001b[0m\n\u001b[1;32m    335\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    336\u001b[0m         \"\"\"\n\u001b[0;32m--> 337\u001b[0;31m         \u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraw_decode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0m_w\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    338\u001b[0m         \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_w\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    339\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.8/lib/python3.8/json/decoder.py\u001b[0m in \u001b[0;36mraw_decode\u001b[0;34m(self, s, idx)\u001b[0m\n\u001b[1;32m    353\u001b[0m             \u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscan_once\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    354\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 355\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mJSONDecodeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Expecting value\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    356\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mJSONDecodeError\u001b[0m: Expecting value: line 1 column 1 (char 0)"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
