--- a/1.scraping/test.ipynb
+++ b/1.scraping/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93007,6 +93007,102 @@
    "source": [
     "df = pd.read_pickle(\"./scraped_files/diff.pkl\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_pickle(\"./scraped_files/chromium/comments.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 30802 entries, 0 to 30801\n",
+      "Data columns (total 26 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   index                  30802 non-null  int64  \n",
+      " 1   change_message_id      30802 non-null  object \n",
+      " 2   unresolved             30802 non-null  bool   \n",
+      " 3   patch_set              30802 non-null  int64  \n",
+      " 4   id                     30802 non-null  object \n",
+      " 5   updated                30802 non-null  object \n",
+      " 6   message                30802 non-null  object \n",
+      " 7   commit_id              30802 non-null  object \n",
+      " 8   author._account_id     30802 non-null  int64  \n",
+      " 9   author.name            30802 non-null  object \n",
+      " 10  author.email           30794 non-null  object \n",
+      " 11  author.avatars         30802 non-null  object \n",
+      " 12  author.status          3705 non-null   object \n",
+      " 13  in_reply_to            16016 non-null  object \n",
+      " 14  change_id              30802 non-null  object \n",
+      " 15  path                   30802 non-null  object \n",
+      " 16  line                   30802 non-null  float64\n",
+      " 17  range.start_line       18884 non-null  float64\n",
+      " 18  range.start_character  18884 non-null  float64\n",
+      " 19  range.end_line         18884 non-null  float64\n",
+      " 20  range.end_character    18884 non-null  float64\n",
+      " 21  side                   432 non-null    object \n",
+      " 22  author.username        190 non-null    object \n",
+      " 23  author.display_name    828 non-null    object \n",
+      " 24  author.inactive        213 non-null    object \n",
+      " 25  tag                    771 non-null    object \n",
+      "dtypes: bool(1), float64(5), int64(3), object(17)\n",
+      "memory usage: 5.9+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        7207603c9a962f3047fbb5300b69133922ddbb97\n",
+       "1        7207603c9a962f3047fbb5300b69133922ddbb97\n",
+       "2        10d7d56bd7f2eb98388a7daa1f86f5cf859d7431\n",
+       "3        c146b676d64f8d9f898602618017ffef271b7939\n",
+       "4        c146b676d64f8d9f898602618017ffef271b7939\n",
+       "                           ...                   \n",
+       "30797    eb575faf350d3756a38d31fa856eb6feb295f102\n",
+       "30798    eb575faf350d3756a38d31fa856eb6feb295f102\n",
+       "30799    eb575faf350d3756a38d31fa856eb6feb295f102\n",
+       "30800    eb575faf350d3756a38d31fa856eb6feb295f102\n",
+       "30801    cf3dbada3bece6408df1051a092f8871ec23b956\n",
+       "Name: commit_id, Length: 30802, dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.duplicated()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
