--- a/2.preprocessing/test_pickupmethods.ipynb
+++ b/2.preprocessing/test_pickupmethods.ipynb
@@ -2,13 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "import lizard\n",
     "import pandas as pd\n",
     "import matplotlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ファイルをlistで読み込み\n",
+    "def read_file_as_list(file_path):\n",
+    "  f = open(file_path, 'r')\n",
+    "  lines = f.readlines()\n",
+    "  f.close()\n",
+    "  return lines\n",
+    "# ファイルをlistで保存\n",
+    "def save_list_as_file(file_path,li):\n",
+    "  with open(file_path,\"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(\"\".join(li))\n"
    ]
   },
   {
@@ -20,17 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "review_df = pd.read_pickle(\"./review_df.pkl\")\n",
-    "review_df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +72,129 @@
     }
    ],
    "source": [
-    "# 一旦start_lineとend_lineは捨ててlineだけでやる\n"
+    "review_df = pd.read_pickle(\"./review_df.pkl\")\n",
+    "review_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1データでやる。\n",
+    "sample = review_df.loc[0]\n",
+    "fb = sample.filepath_before"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'140fa212_552b55e6_before.java'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample.filepath_before"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "i = lizard.analyze_file(\"./files/\"+fb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['        {\\n', '            add(ChromeTabbedActivity.class.getName());\\n', '            add(MultiInstanceChromeTabbedActivity.class.getName());\\n', '            add(ChromeTabbedActivity2.class.getName());\\n', '            add(MAIN_LAUNCHER_ACTIVITY_NAME);\\n', '        }\\n', '    };\\n']\n",
+      "    public static final HashSet<String> TABBED_MODE_COMPONENT_NAMES = new HashSet<String>() {\n",
+      "\n",
+      "        {\n",
+      "\n",
+      "            add(ChromeTabbedActivity.class.getName());\n",
+      "\n",
+      "            add(MultiInstanceChromeTabbedActivity.class.getName());\n",
+      "\n",
+      "            add(ChromeTabbedActivity2.class.getName());\n",
+      "\n",
+      "            add(MAIN_LAUNCHER_ACTIVITY_NAME);\n",
+      "\n",
+      "        }\n",
+      "\n",
+      "    };\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "lizard_di = i.function_list[0].__dict__\n",
+    "start_line = i.function_list[0].__dict__[\"start_line\"]\n",
+    "end_line = i.function_list[0].__dict__[\"end_line\"]\n",
+    "file_li = read_file_as_list(\"./files/\"+fb)\n",
+    "print(file_li[start_line:end_line] )\n",
+    "for line in file_li[start_line-1:end_line]:\n",
+    "  print(line)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get methods でファイル保存してメソッド数を返す\n",
+    "\n",
+    "import lizard\n",
+    "def get_methods(filepath):\n",
+    "  file_li = read_file_as_list(\"./files/\"+filepath)\n",
+    "  \n",
+    "  liz = lizard.analyze_file(\"./files/\"+fb)\n",
+    "  for i,liz_func in enumerate(liz.function_list):\n",
+    "    start_line = liz_func.__dict__[\"start_line\"]\n",
+    "    end_line = liz_func.__dict__[\"end_line\"]\n",
+    "    methods = file_li[start_line-1:end_line]\n",
+    "    save_list_as_file(\"./methods/\"+filepath.rsplit(\"_\",1)[0]+\"_\"+str(i)+\"_\"+filepath.rsplit(\"_\",1)[1],methods)\n",
+    "  return len(liz.function_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "117"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_methods(sample.filepath_before)"
    ]
   },
   {
@@ -65,10 +202,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 1データでやる。該当メソッドだけ取り出して後は消す。\n",
-    "sample = review_df.loc[0]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
