--- a/2.preprocessing/test_src2abs.ipynb
+++ b/2.preprocessing/test_src2abs.ipynb
@@ -12,11 +12,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "メソッドの抽象化を行う"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_pickle(\"3_review_df.pkl\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.loc[0:\"filepath_before\"]"
+   ]
   },
   {
    "cell_type": "markdown",
