--- a/2.preprocessing/test_src2abs.ipynb
+++ b/2.preprocessing/test_src2abs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,25 +15,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "メソッドの抽象化を行う"
+    "プログラム上でメソッドの抽象化を行う"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 783 entries, 0 to 782\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column                Non-Null Count  Dtype  \n",
+      "---  ------                --------------  -----  \n",
+      " 0   comments_id           783 non-null    object \n",
+      " 1   line                  783 non-null    float64\n",
+      " 2   message               783 non-null    object \n",
+      " 3   range.start_line      680 non-null    float64\n",
+      " 4   range.end_line        680 non-null    float64\n",
+      " 5   filepath_before       783 non-null    object \n",
+      " 6   filepath_after        783 non-null    object \n",
+      " 7   is_gerrit             783 non-null    bool   \n",
+      " 8   repository_name       783 non-null    object \n",
+      " 9   methods_before_count  783 non-null    int64  \n",
+      " 10  methods_after_count   783 non-null    int64  \n",
+      "dtypes: bool(1), float64(3), int64(2), object(5)\n",
+      "memory usage: 68.1+ KB\n"
+     ]
+    }
+   ],
    "source": [
-    "df = pd.read_pickle(\"3_review_df.pkl\")"
+    "df = pd.read_pickle(\"3_review_df.pkl\")\n",
+    "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Source Code Abstracted successfully!\n",
+      "Abstracted Code: ./test.java\n",
+      "Mapping: ./test.java.map\n"
+     ]
+    }
+   ],
    "source": [
-    "df.loc[0:\"filepath_before\"]"
+    "# subprocess でjavaファイル\n",
+    "import subprocess\n",
+    "\n",
+    "input_file_path = \"./0a880965_e08adf83_0_after.java\"\n",
+    "\n",
+    "cp = subprocess.run([\"java\", \"-jar\",\"src2abs-0.1-jar-with-dependencies.jar\", \"single\",\"method\",input_file_path,\"./test.java\",\"./idioms.csv\"])\n",
+    "\n"
    ]
   },
   {
