リファクタリング+READMEのアップデート

--- a/2.preprocessing/text.ipynb
+++ b/2.preprocessing/text.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import lizard\n",
-    "import pandas as pd\n",
-    "import matplotlib"
+    "import pandas as pd"
    ]
   },
   {
@@ -16,7 +15,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "comments_df = pd.read_pickle(\"../1.crawling/scraped_files/chromium/comments.pkl\")\n",
+    "print(comments_df.info())\n",
+    "diff_df = pd.read_pickle(\"../1.crawling/scraped_files/chromium/diff.pkl\")\n",
+    "print(diff_df.info())"
+   ]
   },
   {
    "cell_type": "code",
@@ -33,19 +37,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "diff_df = pd.read_pickle(\"../1.scraping/scraped_files/chromium/diff.pkl\")"
+    "diff_df = pd.read_pickle(\"../1.scraping/scraped_files/chromium/diff.pkl\")\n",
+    "diff_df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 30802 entries, 0 to 30801\n",
+      "Data columns (total 26 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   index                  30802 non-null  int64  \n",
+      " 1   change_message_id      30802 non-null  object \n",
+      " 2   unresolved             30802 non-null  bool   \n",
+      " 3   patch_set              30802 non-null  int64  \n",
+      " 4   id                     30802 non-null  object \n",
+      " 5   updated                30802 non-null  object \n",
+      " 6   message                30802 non-null  object \n",
+      " 7   commit_id              30802 non-null  object \n",
+      " 8   author._account_id     30802 non-null  int64  \n",
+      " 9   author.name            30802 non-null  object \n",
+      " 10  author.email           30794 non-null  object \n",
+      " 11  author.avatars         30802 non-null  object \n",
+      " 12  author.status          3705 non-null   object \n",
+      " 13  in_reply_to            16016 non-null  object \n",
+      " 14  change_id              30802 non-null  object \n",
+      " 15  path                   30802 non-null  object \n",
+      " 16  line                   30802 non-null  float64\n",
+      " 17  range.start_line       18884 non-null  float64\n",
+      " 18  range.start_character  18884 non-null  float64\n",
+      " 19  range.end_line         18884 non-null  float64\n",
+      " 20  range.end_character    18884 non-null  float64\n",
+      " 21  side                   432 non-null    object \n",
+      " 22  author.username        190 non-null    object \n",
+      " 23  author.display_name    828 non-null    object \n",
+      " 24  author.inactive        213 non-null    object \n",
+      " 25  tag                    771 non-null    object \n",
+      "dtypes: bool(1), float64(5), int64(3), object(17)\n",
+      "memory usage: 5.9+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "diff_df = pd.read_pickle(\"../1.scraping/scraped_files/chromium/comments.pkl\")\n",
+    "diff_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 28750 entries, 0 to 28749\n",
+      "Data columns (total 17 columns):\n",
+      " #   Column               Non-Null Count  Dtype  \n",
+      "---  ------               --------------  -----  \n",
+      " 0   change_type          28750 non-null  object \n",
+      " 1   content              28750 non-null  object \n",
+      " 2   meta_a.name          28229 non-null  object \n",
+      " 3   meta_a.content_type  28229 non-null  object \n",
+      " 4   meta_a.lines         28229 non-null  float64\n",
+      " 5   meta_a.web_links     26691 non-null  object \n",
+      " 6   meta_b.name          28741 non-null  object \n",
+      " 7   meta_b.content_type  28741 non-null  object \n",
+      " 8   meta_b.lines         28741 non-null  float64\n",
+      " 9   meta_b.web_links     27203 non-null  object \n",
+      " 10  changes_id           28750 non-null  object \n",
+      " 11  revisions_id         28750 non-null  object \n",
+      " 12  path                 28750 non-null  object \n",
+      " 13  patch_set_a          28750 non-null  int64  \n",
+      " 14  patch_set_b          28750 non-null  int64  \n",
+      " 15  comments_id          28750 non-null  object \n",
+      " 16  diff_header          21195 non-null  object \n",
+      "dtypes: float64(2), int64(2), object(13)\n",
+      "memory usage: 3.7+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "diff_df.info()"
    ]
