--- a/3.masking/test.ipynb
+++ b/3.masking/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "7                       True  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,10 +848,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>masked_content_before</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 ; import VAR_3 ; ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 ; import VAR_3 ; ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 ; import VAR_3 ; ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 . Context ; impor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 . Context ; impor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 ; import VAR_3 . ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 ; import VAR_3 . ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 ; import VAR_3 . ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 ; import VAR_3 . ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 ; import VAR_3 . ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 ; import VAR_3 . ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 . Context ; impor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 . Context ; impor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 . Context ; impor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 . Context ; impor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 . Context ; impor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 . Context ; impor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 . Context ; impor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 . Context ; impor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 . Context ; impor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 . Context ; impor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 . Context ; impor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 . Context ; impor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 . Context ; impor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 . Context ; impor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 . Context ; impor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 . Context ; impor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 . Context ; impor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 . Context ; impor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 ; import VAR_3 ; ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 ; import VAR_3 ; ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 ; import VAR_3 ; ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 ; import VAR_3 ; ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>package VAR_1 ; import static VAR_2 ; import s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 ; import VAR_3 ; ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>package VAR_1 ; import VAR_2 ; import VAR_3 ; ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                masked_content_before\n",
+       "0   package VAR_1 ; import VAR_2 ; import VAR_3 ; ...\n",
+       "1   package VAR_1 ; import VAR_2 ; import VAR_3 ; ...\n",
+       "2   package VAR_1 ; import VAR_2 ; import VAR_3 ; ...\n",
+       "6   package VAR_1 ; import VAR_2 . Context ; impor...\n",
+       "7   package VAR_1 ; import VAR_2 . Context ; impor...\n",
+       "14  package VAR_1 ; import VAR_2 ; import VAR_3 . ...\n",
+       "15  package VAR_1 ; import VAR_2 ; import VAR_3 . ...\n",
+       "23  package VAR_1 ; import VAR_2 ; import VAR_3 . ...\n",
+       "24  package VAR_1 ; import VAR_2 ; import VAR_3 . ...\n",
+       "27  package VAR_1 ; import VAR_2 ; import VAR_3 . ...\n",
+       "28  package VAR_1 ; import VAR_2 ; import VAR_3 . ...\n",
+       "36  package VAR_1 ; import VAR_2 . Context ; impor...\n",
+       "37  package VAR_1 ; import VAR_2 . Context ; impor...\n",
+       "38  package VAR_1 ; import VAR_2 . Context ; impor...\n",
+       "39  package VAR_1 ; import VAR_2 . Context ; impor...\n",
+       "44  package VAR_1 ; import VAR_2 . Context ; impor...\n",
+       "45  package VAR_1 ; import VAR_2 . Context ; impor...\n",
+       "46  package VAR_1 ; import VAR_2 . Context ; impor...\n",
+       "47  package VAR_1 ; import VAR_2 . Context ; impor...\n",
+       "48  package VAR_1 ; import VAR_2 . Context ; impor...\n",
+       "49  package VAR_1 ; import VAR_2 . Context ; impor...\n",
+       "50  package VAR_1 ; import VAR_2 . Context ; impor...\n",
+       "51  package VAR_1 ; import VAR_2 . Context ; impor...\n",
+       "52  package VAR_1 ; import VAR_2 . Context ; impor...\n",
+       "53  package VAR_1 ; import VAR_2 . Context ; impor...\n",
+       "56  package VAR_1 ; import VAR_2 . Context ; impor...\n",
+       "57  package VAR_1 ; import VAR_2 . Context ; impor...\n",
+       "58  package VAR_1 ; import VAR_2 . Context ; impor...\n",
+       "59  package VAR_1 ; import VAR_2 . Context ; impor...\n",
+       "67  package VAR_1 ; import VAR_2 ; import VAR_3 ; ...\n",
+       "68  package VAR_1 ; import VAR_2 ; import VAR_3 ; ...\n",
+       "69  package VAR_1 ; import VAR_2 ; import VAR_3 ; ...\n",
+       "70  package VAR_1 ; import VAR_2 ; import VAR_3 ; ...\n",
+       "71  package VAR_1 ; import static VAR_2 ; import s...\n",
+       "72  package VAR_1 ; import VAR_2 ; import VAR_3 ; ...\n",
+       "73  package VAR_1 ; import VAR_2 ; import VAR_3 ; ..."
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comments_df.loc[:,[\"masked_content_before\"]]"
+   ]
   },
   {
    "cell_type": "code",
